# subway

./: Makefile  Readme.MD
demo/: Readme.md  main.go
docs/: notes.md
home/: client.go  go.mod  main.go  notes.md  server.go
node/: Cargo.toml
node/src/: config.rs  errors.rs  ipv4.rs  lib.rs  net.rs  node.rs  routing.rs
test/: .bashrc  .tmux.conf  create_test_network.sh
